force-app/main/default/objects/Opportunity/fields/Stage_Alert_Stage__c.field-meta.xml
<CustomField>
    <!--
        THIS COMMENT SITS INSIDE THE ROOT ELEMENT DELIBERATELY - a comment ABOVE the root breaks
        `sf` deploy at conversion with a misleading parent-xml error.

        🔴 THE SNAPSHOT FIELD - NOT OPTIONAL. Half of the Item 4 stalled-deal-reminder idempotency
        marker, paired with Stage_Alert_Last_Sent_Date__c. The other markers in this org
        (Offer_Alert_Due_Date__c/Offer_Alert_Last_Interval__c,
        NDA_Alert_Expiry_Date__c/NDA_Alert_Last_Interval__c) snapshot a DATE, because for those
        features the thing that re-arms the ladder is the deadline moving. This feature is
        different: the thing that must re-arm the reminder is a STAGE CHANGE, not a date change -
        a deal that moves from Underwriting to LOI and then stalls again in LOI must ring a
        SECOND time even though Stage_Entry_Date__c and Stage_Alert_Last_Sent_Date__c could both
        be "old" by the same measure. A date-only marker (mirroring the other two features'
        shape) would leave such a deal PERMANENTLY SILENT after its first reminder. This field is
        what StageDelayService's re-arm test actually keys on:
            Stage_Alert_Stage__c != StageName OR Stage_Alert_Last_Sent_Date__c < Stage_Entry_Date__c
        Written by StageDelayAlertBatch in system mode, alongside Stage_Alert_Last_Sent_Date__c,
        only for deals that were actually notified (send-first-stamp-second - see that batch's
        header).

        Suppression cadence is FIRE ONCE PER STAGE OCCUPANCY (design-requirements.md §0.5 Q2) -
        not an escalating ladder like the CFO/NDA reminders. One row, one field pair, one send per
        stall.
    -->
    <fullName>Stage_Alert_Stage__c</fullName>
    <description>Snapshot of StageName at the moment the last stalled-deal reminder was sent for this deal. Paired with Stage_Alert_Last_Sent_Date__c as the re-arm key: a deal that moved to a new stage and stalled again must ring again, even if the last-sent date looks recent by other measures. Written by StageDelayAlertBatch in system mode; do not hand-edit except to correct a known data error.</description>
    <inlineHelpText>Set by the daily stalled-deal reminder job. The stage the deal was in when last reminded; a stage change re-arms the reminder even if it fired recently.</inlineHelpText>
    <label>Stage Alert Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>