force-app/main/default/objects/Opportunity/fields/Stage_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entry_Date__c</fullName>
    <label>Stage Entry Date</label>
    <description>The date this deal ENTERED its current stage. Stamped by Apex (OpportunityStageEntryService) on every genuine stage transition. Re-stamped, not preserved, on re-entry - the clock restarts. Feeds Days_In_Stage__c and the Item 4 stalled-deal reminder.</description>
    <inlineHelpText>Set automatically when the deal's stage changes. Do not edit unless correcting a known data error.</inlineHelpText>
    <type>Date</type>
</CustomField>