force-app/main/default/objects/Opportunity/fields/Target_Return__c.field-meta.xml
<CustomField>
    <fullName>Target_Return__c</fullName>
    <description>DPEG&apos;s target internal rate of return for this investment over the hold period.</description>
    <label>Target Return</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>