force-app/main/default/objects/Opportunity/fields/Underwriting_Complete__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Section 12B: required checkbox confirming underwriting is complete. Gates entry into the Underwriting_Approval process (principals cannot be asked to approve an unfinished underwrite).</description>
    <label>Underwriting Complete</label>
    <type>Checkbox</type>
</CustomField>