force-app/main/default/objects/Opportunity/fields/Underwriting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Notes__c</fullName>
    <description>Free-form underwriting notes (Junior's Section 12 field list).</description>
    <label>Underwriting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>