force-app/main/default/objects/Opportunity/fields/Underwriting_OneDrive_URL__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_OneDrive_URL__c</fullName>
    <description>Direct link to the Excel underwriting model on OneDrive.</description>
    <label>Underwriting OneDrive URL</label>
    <type>Url</type>
</CustomField>