force-app/main/default/objects/Opportunity/fields/Underwriting_Status__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Status__c</fullName>
    <description>Workflow status of the underwriting model.</description>
    <label>Underwriting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Approved by Principals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>