force-app/main/default/objects/Opportunity/fields/Underwritten_NOI__c.field-meta.xml
<CustomField>
    <fullName>Underwritten_NOI__c</fullName>
    <description>DPEG&apos;s projected Net Operating Income at stabilization. Editable underwriting field on the Opportunity.</description>
    <label>Underwritten NOI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>