force-app/main/default/objects/Opportunity/fields/UW_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>UW_Approval_Date__c</fullName>
    <description>When the principals approved the underwriting (stamped from approval history by ApprovalAuditService).</description>
    <label>UW Approval Date</label>
    <type>DateTime</type>
</CustomField>