force-app/main/default/objects/Opportunity/fields/UW_Approved__c.field-meta.xml
<CustomField>
    <fullName>UW_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by the Underwriting_Approval process final-approval action. Audit checkbox Junior asked for; approver/date stamped by ApprovalAuditService.</description>
    <label>Underwriting Approved</label>
    <type>Checkbox</type>
</CustomField>