force-app/main/default/objects/Opportunity/fields/UW_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>UW_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which principal approved the underwriting (stamped from approval history by ApprovalAuditService).</description>
    <label>UW Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>UW Approved Opportunities</relationshipLabel>
    <relationshipName>UW_Approved_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>