force-app/main/default/objects/Opportunity/recordTypes/Land.recordType-meta.xml
<RecordType>
    <fullName>Land</fullName>
    <active>true</active>
    <businessProcess>Land</businessProcess>
    <label>Land</label>
</RecordType>