force-app/main/default/objects/Opportunity/recordTypes/Retail.recordType-meta.xml
<RecordType>
    <!--
        THIS NOTE LIVES IN A COMMENT, NOT IN <description> (255-char cap), and it is
        INSIDE the root element on purpose - a comment ABOVE <RecordType> breaks `sf`
        deploy at conversion.

        THIS FILE REPLACES Opportunity/recordTypes/Commercial.recordType-meta.xml.
        It is a byte-for-byte clone of that file with three substitutions - the root
        <fullName>, <businessProcess> and <label> - plus this comment and the
        <description>. Nothing else was changed, deliberately: every picklistValues block
        (Asset_Type__c, Deal_Category__c, Deal_Status__c, ForecastCategoryName, LeadSource,
        Rejection_Reason__c, Type, Underwriting_Status__c) is identical, so the rename
        cannot quietly alter which values a commercial deal may take. Diff the two files
        before D4; the only expected difference beyond the three substitutions is the
        transitional Deal_Type__c value noted below.

        DEVELOPERNAME CHANGES, NOT ONLY THE LABEL. Apex resolves record types by
        DeveloperName (RecordTypeSelector, LeadConvertService), so a label-only change
        would leave every resolution site saying 'Commercial' forever. The spec approved a
        FULL rename; D3 is where that is paid for.

        TRANSITIONAL: THE Deal_Type__c BLOCK STILL ENUMERATES 'Commercial'. That is
        deliberate for the D1->D4 window. The migration between D1 and D2 moves a record's
        RECORD TYPE and its Deal_Type__c VALUE in the same pass; a record that lands on
        this record type while still holding 'Commercial' must render correctly. Apex DML
        does NOT enforce record-type picklist restriction (ARCHITECTURE.md sec 2), so
        omitting it would not have blocked anything - it would only have made the UI
        disagree with the stored value. Remove that one <values> block at D4, together
        with the Commercial record type and business process.
    -->
    <fullName>Retail</fullName>
    <active>true</active>
    <businessProcess>Retail</businessProcess>
    <description>Commercial acquisition deals. Replaces the Commercial record type, which is retired at Phase 1 D4. Deal_Type__c still enumerates the outgoing Commercial value for the migration window only.</description>
    <label>Retail</label>
</RecordType>