force-app/main/default/objects/Opportunity/validationRules/Completed_LOI_Before_PSA.validationRule-meta.xml
<ValidationRule>
    <!--
        THIS NOTE LIVES IN A COMMENT, NOT IN <description>, AND IT MUST STAY THAT WAY.
        ValidationRule.Description is capped at 255 characters. A comment is repo-only and
        is never sent to the Metadata API, so it can be as long as it needs to be. Do not
        paste this back into <description>. Approved_LOI_Before_PSA (same folder) is the
        precedent for this pattern.

        PHASE 2 (2026-08-14): THE GATED STAGE WAS RENAMED 'PSA' -> 'Under Contract (PSA)'.
        Only the Opportunity STAGE value moved. The API name deliberately still reads
        _Before_PSA - renaming a ValidationRule is a delete-and-recreate, and the new value
        still contains "PSA". Nothing about the LOI child changed in Phase 2.

        MIGRATION SAFETY - MEASURED FROM THIS FORMULA, NOT ASSUMED. The P2 backfill runs
        BETWEEN P2-D1 and P2-D2, while this file still reads ISPICKVAL(StageName, 'PSA').
        The backfill writes the NEW value, which does not match that literal, so this rule
        cannot fire on it. Repointing this file BEFORE the backfill would break it.

        🔴 TWO PHASES EDIT THIS ONE FILE. Phase 2 changed the Opportunity STAGE literal
        (above). Phase 3 must change the LOI literal on the last line of the formula:
        the acquisition LOI terminal moves 'Completed' -> 'Signed', and until that edit
        lands this rule blocks EVERY deal from entering Under Contract (PSA), because no
        acquisition LOI will ever read 'Completed' again. Phase 3's edit MUST land AFTER
        this one or one silently overwrites the other (requirements sec 7 / sec 9 C2).

        ✅ PHASE 3 DONE, 2026-08-14 - AND IT LANDED AFTER PHASE 2's EDIT, as required. The
        Opportunity stage literal above is Phase 2's and was NOT disturbed; verify that by
        confirming ISPICKVAL(StageName, 'Under Contract (PSA)') still reads exactly that.

        🔴 THE LOI LEG NOW NAMES BOTH TERMINALS, AND THAT IS WHAT REMOVES THE WINDOW.
        Requirements C2 describes a straight swap 'Completed' -> 'Signed'. A straight swap is
        correct on exactly ONE side of the row migration and catastrophic on the other, in BOTH
        directions:
          - swap BEFORE the migration and every live LOI still reads 'Completed', so the rule
            blocks EVERY deal from entering Under Contract (PSA);
          - swap AFTER the migration but leave the file unchanged in between, and every migrated
            LOI reads 'Signed' while the rule still demands 'Completed' - same outcome.
        The error condition is therefore `AND(<> 'Completed', <> 'Signed')`: it fires only when
        the LOI is NEITHER, so it is correct BEFORE, DURING and AFTER the migration and can ship
        in the additive P3-D1 step rather than in the knife-edge window. Same list-both-then-drop
        shape Phase 2 used on reports/Acquisitions/Deal_Pipeline_by_Stage.
        ⚠ THE 'Completed' LEG IS TRANSITIONAL AND COMES OUT AT P3-D3, in the same change that
        deactivates the value. Staged in agent-output/p3-d3-retire-loi-psa/. Do not drop it
        earlier - until the migration has provably completed, an un-migrated LOI on 'Completed'
        is a legitimately finished LOI and must not block its deal.

        ⚠ THIS FILE IS SAFE TO DEPLOY BEFORE THE NEW PICKLIST VALUE EXISTS, and that is a
        property of TEXT(), not luck. TEXT(picklist) <> 'literal' is a string comparison and the
        literal is never resolved against the value set, so naming 'Signed' costs nothing at
        P3-D1. ISPICKVAL would NOT be safe here - it validates its literal at deploy time and
        would fail against a value the org does not yet have. That is a second, independent
        reason for the standing TEXT()-not-ISPICKVAL rule recorded further down.

        WHY THIS IS A SEPARATE RULE FROM Approved_LOI_Before_PSA, NOT AN EXTENSION OF IT.
        Approved_LOI_Before_PSA tests the OPPORTUNITY's own approval flag
        (LOI_Approved__c) and the presence of the Primary_LOI__c lookup. It does not read
        anything on the LOI child record itself, so a deal can reach Under Contract (PSA) with
        its LOI still
        sitting on Stage__c = 'Draft' - reproduced live 2026-08-12. This rule closes that
        gap by reading the LOI's OWN lifecycle field, Primary_LOI__r.Stage__c. Two separate,
        independently-named rules are kept deliberately separate (rather than folding this
        condition into Approved_LOI_Before_PSA) so each error names exactly one remedy:
        link+approve an LOI (existing rule) vs. complete the LOI (this rule). Folding them
        into one OR'd condition would force one message to describe two different fixes.
        Matches the standing repo precedent of NDA_Signed_Before_Underwriting /
        All_NDAs_Signed_Before_Progression - separate named rules, distinct messages, each
        independently deactivatable for diagnosis.

        WHY NOT(ISBLANK(Primary_LOI__c)) IS REQUIRED, NOT DEFENSIVE POLISH. When
        Primary_LOI__c is blank, TEXT(Primary_LOI__r.Stage__c) evaluates to '' (empty
        string), and '' <> 'Completed' is TRUE - so without this guard, a blank lookup
        would ALSO fire this rule, on top of Approved_LOI_Before_PSA, which already owns
        the blank-lookup case. The user would see two error messages for one underlying
        problem. This guard keeps the blank case to exactly one message.

        KNOWN, UNRESOLVED OVERLAP CASE - THE GUARD ABOVE ONLY CLOSES THE BLANK-LOOKUP
        CASE, NOT EVERY OVERLAP. A deal with the LOI LINKED but LOI_Approved__c = false
        AND the LOI's own Stage__c != 'Completed' satisfies BOTH this rule AND
        Approved_LOI_Before_PSA at the same time - reproduced live 2026-08-12 (a linked
        LOI sitting on Draft). Salesforce does not guarantee validation-rule evaluation
        order, and the only live writer is Apex: StageAdvanceService.setStage() catches
        DmlException and rethrows getDmlMessage(0) - ONE message only - so a user blocked
        by both rules at once is told about whichever one happens to fire first, and may
        not learn the second remedy applies until they fix the first and save again. This
        is a known, accepted limitation, not something to silently patch here: do NOT
        change either rule's formula to try to eliminate it (see "WHY THIS IS A SEPARATE
        RULE" above for why one OR'd rule is worse). If this becomes a real UX problem,
        the fix belongs in Apex (e.g. collecting and surfacing both violated conditions in
        one message), not in the validation rule formulas.

        WHY TEXT(...) <> 'Completed' RATHER THAN ISPICKVAL. This repo's standing rule
        (RecordStageAdvanceService's own class header) is that LOI__c.Stage__c comparisons
        must use TEXT(...), not ISPICKVAL, because one of its ten values across the two LOI
        record types carries a literal slash ('Prepare/Review'), which ISPICKVAL handles
        unreliably in this org's picklist metadata. TEXT() is the repo convention for every
        cross-object stage compare of this shape (see also StageAdvanceService's
        'Dead/Pass' note).

        WHICH WRITER THIS RULE ACTUALLY MEETS. StageName = 'Under Contract (PSA)' is
        reached in exactly one live way: StageAdvanceService.advance() via NEXT_STAGE's
        'LOI' => 'Under Contract (PSA)' mapping, invoked by the Opportunity.Advance_to_PSA
        quick action (API name unchanged in Phase 2; its LABEL now reads "Advance to Under
        Contract (PSA)"). advanceTo()'s ALLOWED_EXPLICIT_TARGETS deliberately excludes the
        stage under either name, so that path cannot reach this
        rule at all. advance()'s setStage() catches DmlException and rethrows
        getDmlMessage(0), so this rule's errorMessage surfaces verbatim in the user's toast
        with no Apex change required.

        GRANDFATHERING - STATED EXPLICITLY. A validation rule evaluates only on save, and
        both this rule and Approved_LOI_Before_PSA are ISCHANGED(StageName)-scoped. Any deal
        ALREADY sitting at Under Contract (PSA) with a non-Completed LOI (e.g. the ZZFLOWTEST
        deal reproduced 2026-08-12) is UNAFFECTED PERMANENTLY: it will not be blocked from
        being saved, edited, or advanced onward (Under Contract (PSA) -> Closed Won is a
        different transition, ungated by this rule), and it will not appear as non-conforming
        in any report or list view. It is caught only if it is moved off the stage and back
        onto it. ⚠ THE P2 BACKFILL IS EXACTLY SUCH A MOVE IN NAME BUT NOT IN RULE TERMS - see
        MIGRATION SAFETY above; it does not re-gate these deals. Backfilling/correcting
        already-staged deals with a non-Completed LOI is a separate, optional data task and is
        deliberately NOT part of this rule.

        KNOWN, ACCEPTED BOUNDARY - NOT WIDENED SPECULATIVELY. LOI__c.Stage__c carries ten
        values across two record types; 'Executed' is the terminal stage of the DISPOSITION
        LOI record type, not the acquisition one. Primary_LOI__c is stamped only by
        OpportunityReviewService, which creates acquisition LOIs, so a disposition LOI
        cannot legitimately reach this lookup - but if one ever did, TEXT(...) <>
        'Completed' would block it (a disposition LOI never reaches 'Completed', only
        'Executed'). This is recorded as a known, accepted boundary. Do NOT widen the
        formula to AND(<> 'Completed', <> 'Executed') speculatively - there is no verified
        path that reaches this rule with a disposition LOI attached.

        ⚠ THE BOUNDARY PARAGRAPH ABOVE STILL HOLDS AND ITS ARITHMETIC MOVED. Stage__c now
        carries THIRTEEN values, not ten. The boundary is unchanged in substance - a disposition
        LOI reaching this lookup would still be blocked, now because it reads neither 'Completed'
        nor 'Signed' - and the instruction not to add 'Executed' speculatively STANDS. Adding the
        'Signed' leg is NOT an instance of that speculative widening: 'Signed' is the acquisition
        terminal this rule exists to test, reached by every deal on the live path, not a
        disposition value added on a hypothetical.
    -->
    <fullName>Completed_LOI_Before_PSA</fullName>
    <active>true</active>
    <description>Blocks stage entry to Under Contract (PSA) unless the primary LOI&apos;s Stage__c is Signed. Exempts a blank Primary_LOI__c. See the XML comment in this file.</description>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, &apos;Under Contract (PSA)&apos;),
    NOT(ISBLANK(Primary_LOI__c)),
    TEXT(Primary_LOI__r.Stage__c) &lt;&gt; &apos;Signed&apos;
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>This deal cannot enter Under Contract (PSA) until the primary LOI is Signed. Advance the LOI to Signed on its own record page first.</errorMessage>
</ValidationRule>